package MiniWeChat;

import "ChatDataItem.proto";

message ChatLog
{
	repeated ChatDataItem itemList=1;
}