package protocol;

option java_package = "protocol";

enum ENetworkMessage{
    KeepAliveSync=0;
    RegisterReq=1;
    RegisterRsp=2;
    LoginReq=3;
    LoginRsp=4;
}
